# nh-substrate-telemetry

./: .travis.yml  README.md
backend/: Cargo.toml
backend/telemetry_core/src/state/: chain.rs
ci/: .dockerignore  Dockerfile_backend  Dockerfile_frontend  script.sh  setup_env.sh
frontend/: package-lock.json  package.json
frontend/assets/: index.html
frontend/src/: state.ts
