[workspace]
members = [
    "common",
    "telemetry_core",
    "telemetry_shard",
    "test_utils"
]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
version = "1.1.0"
## Enabling these seems necessary to get
## good debug info in Instruments:
# debug = true
# codegen-units = 1
